--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="js-pride-month-gradient" style="width: 100%; height: 0.8rem; background: linear-gradient(90deg, rgb(100, 91, 83) 0%, rgb(235, 82, 82) 18.23%, rgb(247, 143, 47) 34.37%, rgb(244, 193, 81) 48.96%, rgb(82, 187, 118) 66.15%, rgb(38, 165, 215) 82.29%, rgb(224, 105, 183) 100%);"></div>
     <div>
-        <img id="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img id="top-cloud" src="Images/cloud.png" alt="cloud-img">
         <h1 style="margin-bottom: 0px; line-height: 2;">I'm Subhodeep.</h1>
         <h2 style="font-size: 1rem;">I am a web developer.</h2>
-        <img id="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="/images/mountain.png" alt="mountain-png">
+        <img id="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+        <img src="/Images/mountain.png" alt="mountain-png">
     </div>
     
     <div id="about-div">
