Corrected the images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 style="margin-bottom: 0px; line-height: 2;">I'm Subhodeep.</h1>
         <h2 style="font-size: 1rem;">I am a web developer.</h2>
         <img id="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
-        <img src="/Images/mountain.png" alt="mountain-png">
+        <img src="Images/mountain.png" alt="mountain-png">
     </div>
     
     <div id="about-div">
