--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 style="margin: 0px; margin-block-start: 0em; margin-block-end: 0em; padding-top: 0px; color: black;">Contact Me</h2>
     </div>
 
-    <div>
+    <div backgraound-color="white">
         <a href="byob_hZc.py" download class="btn btn2">Click Here</a>
     </div>
     
